# Text-Compressor

./: CMakeLists.txt  README.md
Oldversion/: main.cpp
data/: binfile  text.txt
src/: Bitio.cpp  Bitio.h  Constants.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  P.cpp  P.h  PairDic.cpp  PairDic.h  main.cpp
